cabal-version:       2.2
-- Initial package description 'languages-all-the-way-down.cabal' generated
--  by 'cabal init'.  For further documentation, see
-- http://haskell.org/cabal/users-guide/

name:                languages-all-the-way-down
version:             0.0.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:             BSD-3-Clause
-- license-file:        LICENSE
author:              Rob Rix
maintainer:          rob.rix@me.com
-- copyright:
-- category:
-- extra-source-files:  CHANGELOG.md

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-export-lists
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-name-shadowing
    -Wno-safe
    -Wno-unsafe
  if (impl(ghc >= 8.6))
    ghc-options: -Wno-star-is-type
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies
  if (impl(ghc >= 8.10))
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module

test-suite languages-all-the-way-down
  import:      common
  type:        exitcode-stdio-1.0
  main-is:     Main.hs
  other-modules:
    Control.Carrier.Logging.Identity
    Control.Effect.Logging
  build-depends:
    , async         ^>= 2.2
    , base          ^>= 4.13
    , directory
    , filepath
    , fused-effects
    , mtl           ^>= 2.2
    , transformers  ^>= 0.5.6
